--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
 <head>  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Angular TODO app</title>
+    <title>Angular ToDo app</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 </head>  
-<body ng-controller="mainController">  
+<body ng-controller="mainController" >
+  
+ 
     <div class="container"> 
     <!--Cabecera-->
         <div class="jumbotron text-center">
